sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:3: error: value int is not a member of Int
var ecart =(getNombreValeurs()-2/2).int
                                    ^AlgShellSort:9: error: not found: value j
     setValeur(j,v)}
               ^